# history-grep

./: Cargo.toml  LICENSE  bash-integration.sh  install.sh
.github/workflows/: ci.yml
src/: histfile.rs  interactive.rs  lib.rs  main.rs
