[package]
name = "history-grep"
version = "0.1.0"
edition = "2024"
description = "A utility for efficient search through (bash) history files"

[profile.release]
#debug = true

[[bin]]
name = "hgr"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.50", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.27"
ratatui = "0.29.0"
regex = "1.11.1"
stderrlog = "0.6.0"
tui-input = "0.14.0"
